teleport-cluster/service-teleport-cluster-auth-v17.yaml
# Source: teleport-cluster
apiVersion: v1
kind: Service
metadata:
  name: teleport-cluster-auth-v17
  namespace: teleport-cluster
  labels:
    app.kubernetes.io/name: teleport-cluster
    app.kubernetes.io/instance: teleport-cluster
    app.kubernetes.io/component: auth
    app.kubernetes.io/version: 18.10.3
    teleport.dev/majorVersion: '18'
  annotations:
    noa.re/deploy-id: 87179d3f1509d100
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: teleport-cluster
    app.kubernetes.io/instance: teleport-cluster
    app.kubernetes.io/component: auth
    teleport.dev/majorVersion: '17'
