teleport-cluster/service-teleport-cluster-auth-v18.yaml
# Source: teleport-cluster
apiVersion: v1
kind: Service
metadata:
  name: teleport-cluster-auth-v18
  namespace: teleport-cluster
  labels:
    app.kubernetes.io/name: teleport-cluster
    app.kubernetes.io/instance: teleport-cluster
    app.kubernetes.io/component: auth
    app.kubernetes.io/version: 18.10.4
    teleport.dev/majorVersion: '18'
  annotations:
    noa.re/deploy-id: ebabb22dcfc897bf
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: teleport-cluster
    app.kubernetes.io/instance: teleport-cluster
    app.kubernetes.io/component: auth
    teleport.dev/majorVersion: '18'
