teleport-cluster/service-teleport-cluster.yaml
# Source: teleport-cluster
apiVersion: v1
kind: Service
metadata:
  name: teleport-cluster
  namespace: teleport-cluster
  labels:
    app.kubernetes.io/name: teleport-cluster
    app.kubernetes.io/instance: teleport-cluster
    app.kubernetes.io/component: proxy
    app.kubernetes.io/version: 18.11.0
    teleport.dev/majorVersion: '18'
  annotations:
    noa.re/deploy-id: 2b2981942f7c674d
spec:
  type: NodePort
  ports:
  - name: tls
    port: 443
    targetPort: 3080
    protocol: TCP
  - name: sshproxy
    port: 3023
    targetPort: 3023
    protocol: TCP
  - name: k8s
    port: 3026
    targetPort: 3026
    protocol: TCP
  - name: sshtun
    port: 3024
    targetPort: 3024
    protocol: TCP
  - name: mysql
    port: 3036
    targetPort: 3036
    protocol: TCP
  selector:
    app.kubernetes.io/name: teleport-cluster
    app.kubernetes.io/instance: teleport-cluster
    app.kubernetes.io/component: proxy
